--- a/views/assets/sass/navbar.scss
+++ b/views/assets/sass/navbar.scss
@@ -1,27 +1,65 @@
-.navbar{
+.myNavbar{
+    position: fixed;
+    box-sizing: border-box;
+    width: 100%;
+
     &__icons{
+        width: 100%;
+        height: 25px;
+        
 
           &__left{
-
+            width: 69px;
+            //margin-left: 100px;
           }
 
           &__right{
-
+            width:  87px;
+           // margin-right: 100px;
           }
-    }
-
-    &__nav-items{
 
     }
 
-    &__breadcrumbs{
+    &__items{
+        width: 100%;
+        font-family: "TradeGothicLTBold";
+        text-transform: uppercase;
+        height: 45px;
+        padding-left: 15px;
+        margin: 0;
+        color: black;
+        text-decoration: none;
 
+        &__item{
+            text-decoration: none;
+            font-size: 13px;
+        }
+
+        &__brand{
+            font-family: "MinionProRegular";
+            font-size: 30px;
+            margin: 0 20px;
+            color: rgb(10, 10, 10);
+
+        }
+    }
+
+    &__breadcrumb{
+        width: 100%;
+        color: rgb(128, 128, 128);
+        font-family: "TradeGothicLT";
+        background-color: black;
+
+        &__item{
+            padding: 10px 3px;
+            margin: 0;
+        }
     }
 
     // BREAKPOINTS
     // Mobile
     @media (min-width: 576px) {
-       
+     
     }
 
     // Tablets
@@ -37,3 +75,5 @@
         
     }
 }
+
+ 
