--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1,4 +1,48 @@
 @charset "UTF-8";
+a:link {
+  text-decoration: none !important;
+}
+
+a {
+  text-decoration: none !important;
+  color: black !important;
+}
+
+a:visited {
+  text-decoration: none !important;
+}
+
+.container {
+  width: 100% !important;
+  max-width: 1300px !important;
+}
+.container:after {
+  content: none !important;
+}
+.container:before {
+  content: none !important;
+}
+
+/* Fonts */
+@font-face {
+  font-family: "TradeGothicLT";
+  src: url("/design/fonts/Trade Gothic LT.ttf");
+}
+@font-face {
+  font-family: "TradeGothicLTLight";
+  src: url("/design/fonts/Trade Gothic LT Light.ttf");
+}
+@font-face {
+  font-family: "TradeGothicLTBold";
+  font-weight: bolder;
+  src: url("/design/fonts/Trade Gothic LT Bold.ttf");
+}
+@font-face {
+  font-family: "MinionProRegular";
+  src: url("/design/fonts/Minion Pro Regular.ttf");
+}
+/* Override Bootstrap varis */
+/* Bootsttrap */
 /*!
  * Bootstrap v4.6.0 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -9928,63 +9972,56 @@ h3 {
     border-color: #dee2e6;
   }
 }
-/* Design Fonts */
-@font-face {
+/* My Navbar Style */
+.myNavbar {
+  position: fixed;
+  box-sizing: border-box;
+  width: 100%;
+}
+.myNavbar__icons {
+  width: 100%;
+  height: 25px;
+}
+.myNavbar__icons__left {
+  width: 69px;
+}
+.myNavbar__icons__right {
+  width: 87px;
+}
+.myNavbar__items {
+  width: 100%;
+  font-family: "TradeGothicLTBold";
+  text-transform: uppercase;
+  height: 45px;
+  padding-left: 15px;
+  margin: 0;
+  color: black;
+  text-decoration: none;
+}
+.myNavbar__items__item {
+  text-decoration: none;
+  font-size: 13px;
+}
+.myNavbar__items__brand {
+  font-family: "MinionProRegular";
+  font-size: 30px;
+  margin: 0 20px;
+  color: #0a0a0a;
+}
+.myNavbar__breadcrumb {
+  width: 100%;
+  color: gray;
   font-family: "TradeGothicLT";
-  src: url("/views/assets/design/fonts/Trade Gothic LT.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
+  background-color: black;
+}
+.myNavbar__breadcrumb__item {
+  padding: 10px 3px;
+  margin: 0;
 }
 body {
-  height: 100%;
+  height: 100vh;
 }
 
-/* HEADER STYLE */
-header {
-  width: 100%;
-  background-color: #fff;
-  color: black;
-  position: fixed;
-  padding: 0 185px;
-}
-
-.header-icons {
-  display: flex;
-  justify-content: space-between;
-  background-color: #fff;
-  height: 20px;
-  width: 100%;
-  font-family: "TradeGothicLT";
-}
-
-.header-icons-left {
-  display: inline-flex;
-  justify-content: space-between;
-  border: 1px solid black;
-  width: 45px;
-}
-
-.herader-icons-right {
-  display: inline-flex;
-  justify-content: space-between;
-  border: 1px solid black;
-  width: 45px;
-}
-
-.header-nav {
-  height: 50px;
-  width: 100%;
-  background-color: #fff;
-}
-
-.header-breadcrumbs {
-  background-color: #141414;
-  color: #fff;
-  height: 35px;
-  width: 100%;
-}
-
-/* HEADER STYLE END */
 /* MEDIA QUERIES */
 /* Extra small devices (phones, 600px and down) */
 /* Small devices (portrait tablets and large phones, 600px and up) */
