added Drawer as NavBar child

--- a/views/assets/sass/app.scss
+++ b/views/assets/sass/app.scss
@@ -7,7 +7,9 @@
 @import "./bootstrap/bootstrap.scss";
 /* My Navbar Style */
 @import "navbar.scss";
-//@import "/node_modules/hamburgers/_sass/hamburgers/hamburgers.scss";
+/* Drawer */
+@import "drawer.scss";
+
 
 body {
     height: 100vh;
