--- a/views/assets/sass/navbar.scss
+++ b/views/assets/sass/navbar.scss
@@ -40,6 +40,7 @@
             font-size: 30px;
             margin: 0 20px;
             color: rgb(10, 10, 10);
+            text-transform: uppercase;
 
         }
     }
