Added Header with Preview and Details - Component

--- a/views/assets/sass/app.scss
+++ b/views/assets/sass/app.scss
@@ -9,6 +9,11 @@
 @import "navbar.scss";
 /* Drawer */
 @import "drawer.scss";
+/* Watch - Preview */
+@import "watch-preview.scss";
+/* Watch - Details */
+@import "watch-details.scss";
+
 
 
 body {
