--- a/views/assets/sass/drawer.scss
+++ b/views/assets/sass/drawer.scss
@@ -40,47 +40,11 @@
         transition: opacity 0.2s;
     }
 
+    &__hamburger{
+      position: absolute;
+      right: 15px;
+      top: 13px;
+    }
+
 
 }
-
-  
-  .toggle {
-    width: 120px;
-    background: white;
-    color: tomato;
-    border: 0;
-    padding: 5px;
-    cursor: pointer;
-  }
-  
-  .close {
-    background: white;
-    border: 0;
-    cursor: pointer;
-  }
-  
-  .right-drawer {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 0; /* initially */
-    overflow: hidden;
-    height: 100vh;
-    padding-left: 0; /* initially */
-    border-left: 1px solid whitesmoke;
-    background: white;
-    z-index: 200;
-    transition: all 0.2s;
-  }
-  
-  .drawer-mask {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 0; /* initially */
-    height: 100vh;
-    background: #000;
-    opacity: 0.3;
-    z-index: 199;
-    transition: opacity 0.2s;
-  }
