Added Product Attribute Component

--- a/views/assets/sass/app.scss
+++ b/views/assets/sass/app.scss
@@ -15,6 +15,8 @@
 @import "watch-details.scss";
 /* Watch - Options */
 @import "options.scss";
+/* Product - Details */
+@import "product-attributes.scss";
 
 
 
