--- a/web/css/site.css
+++ b/web/css/site.css
@@ -10010,7 +10010,6 @@ h3 {
 .myNavbar__items__brand {
   font-family: "MinionProRegular";
   font-size: 30px;
-  margin: 0 20px;
   color: #0a0a0a;
   text-transform: uppercase;
 }
@@ -10216,6 +10215,13 @@ h3 {
   }
 }
 
+/* Product - Details */
+.productAttributes__image {
+  padding: 17rem;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
 .myButton {
   background-color: #caa25c;
   border: none;
