--- a/views/assets/sass/product-attributes.scss
+++ b/views/assets/sass/product-attributes.scss
@@ -1,11 +1,53 @@
 // Mobile
 .productAttributes{
+    width: 100%;
 
     &__image{
-        padding: 17rem;
+        width: 100%;
+        padding: 12rem;
         background-position: center;
         background-repeat: no-repeat;
         background-size: contain;
+    }
+
+    &_title{
+        font-size: 32px;
+        font-family: "MinionProRegular";
+        color: rgb(0, 0, 0);
+    }
+
+    &__label{
+        font-family: "MinionProRegular";
+        color: rgb(140, 140, 140);
+        font-size: 15px;
+        
+    }
+
+    &__value{
+        font-family: "TradeGothicLT";
+        font-weight: 600;
+        color: rgb(0, 0, 0);
+        text-transform: uppercase;
+        font-size: 10px;
+    }
+
+    &__content{
+        padding-left: 0;
+    }
+
+    &__item{
+        width:  100%;
+    }
+
+    &__icon{
+        padding: 1.8rem;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: contain;
+    }
+
+    &__divider{
+        border-top: solid 3px gray;
     }
 
 
@@ -26,6 +68,29 @@
     }
     // Desktop large
     @media (min-width: 1200px) {
+        width: 100%;
+
+        &__image{
+            padding: 14rem;
+            background-position: right;
+        }
+    
+        &_title{
+            font-size: 32px;
+        }
+    
+        &__label{
+            font-size: 17px;
+            
+        }
+    
+        &__value{
+            font-size: 14px;
+        }
+
+        &__content{
+            padding: 0 7rem;
+        }
         
     }
 }
