Added Product Details Component and optimize NavBar

--- a/views/assets/sass/app.scss
+++ b/views/assets/sass/app.scss
@@ -17,9 +17,8 @@
 @import "options.scss";
 /* Product - Details */
 @import "product-attributes.scss";
-
-
-
+/* Product - Description */
+@import "product-description.scss";
 
 
 .myButton{
