--- a/views/assets/sass/drawer.scss
+++ b/views/assets/sass/drawer.scss
@@ -5,8 +5,9 @@
     margin: 6px 0;
 }
 .drawer{
+   
     &__right{
-        position: absolute;
+        position: fixed;
         top: 0;
         right: 0;
         width: 0; /* initialisieren */
@@ -17,6 +18,7 @@
         background: white;
         z-index: 200;
         transition: all 0.2s;
+        z-index: 2000;
     }
 
     &__toggle {
@@ -35,7 +37,7 @@
     }
 
     &__mask{
-        position: absolute;
+        position: fixed;
         left: 0;
         top: 0;
         width: 0; /* initially */
@@ -44,6 +46,7 @@
         opacity: 0.3;
         z-index: 199;
         transition: opacity 0.2s;
+        z-index: 300;
     }
 
     &__hamburger{
@@ -56,6 +59,8 @@
         position: absolute;
         right: 17px;
         top: 10px;
+        z-index: 2000;
+        position: fixed;
         
     }
 
