--- a/views/assets/sass/navbar.scss
+++ b/views/assets/sass/navbar.scss
@@ -1,6 +1,10 @@
 .myNavbar{
     box-sizing: border-box;
     width: 100%;
+    position: fixed;
+    z-index: 200;
+    background-color: white;
+    //padding: 10px 0px;
 
     &__icons{
         width: 100%;
@@ -12,10 +16,6 @@
             //margin-left: 100px;
           }
 
-          &__right{
-            width:  87px;
-           // margin-right: 100px;
-          }
 
     }
 
@@ -71,6 +71,9 @@
     }
     // Desktop large
     @media (min-width: 1200px) {
+        .myNavbar{
+            width: 100%;
+        }
         
     }
 }
