--- a/views/assets/sass/app.scss
+++ b/views/assets/sass/app.scss
@@ -21,6 +21,8 @@
 @import "product-description.scss";
 /* Related - Pieces */
 @import "related-pieces.scss";
+/* Footer */
+@import "footer.scss";
 
 
 .swiper-container {
