--- a/web/css/site.css
+++ b/web/css/site.css
@@ -10129,6 +10129,10 @@ h3 {
 }
 .watch__preview__thumbnail {
   margin: 10px 10px;
+  padding: 10%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 @media (min-width: 768px) {
   .watch__preview {
@@ -10139,7 +10143,27 @@ h3 {
   .watch__preview {
     padding-top: 100%;
   }
+  .watch__preview__thumbnail {
+    margin: 10px 10px;
+    padding: 30%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
 }
+@media (min-width: 1200px) {
+  .watch__preview {
+    padding-top: 100%;
+  }
+  .watch__preview__thumbnail {
+    margin: 10px 10px;
+    padding: 30%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+}
+
 /* Watch - Details */
 /* Mobile */
 .watch__details__tag {
