--- a/views/assets/sass/watch-preview.scss
+++ b/views/assets/sass/watch-preview.scss
@@ -11,7 +11,7 @@
 
         &__thumbnail{
             margin: 10px 10px;
-            padding: 10%;
+            padding: 5%;
             background-position: center;
             background-repeat: no-repeat;
             background-size: contain;
@@ -22,37 +22,67 @@
      // BREAKPOINTS
     // Mobile
     @media (min-width: 576px) {
+     
        
       
     }
 
     // Tablets
     @media (min-width: 768px) {
+        margin: 60px 0px;
+
         &__preview{
             padding-top: 50%;
-        }
-    }
-    // Desktop
-    @media (min-width: 992px) {
-        &__preview{
-            padding-top: 100%;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: contain;
+            transition: all 0.25s;
 
             &__thumbnail{
                 margin: 10px 10px;
-                padding: 30%;
+                padding: 5%;
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: contain;
             }
 
-        }    
+        }
+
+    }
+    // Desktop
+    @media (min-width: 992px) {
+        margin: 60px 0px;
+
+        &__preview{
+            padding-top: 100%;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: contain;
+            transition: all 0.25s;
+    
+            &__thumbnail{
+                margin: 10px 10px;
+                padding: 20%;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: contain;
+            }
+    
+        }
+     
     }
         
     
     // Desktop large
     @media (min-width: 1200px) {
+        margin: 60px 0px;
+
         &__preview{
             padding-top: 100%;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: contain;
+            transition: all 0.25s;
 
             &__thumbnail{
                 margin: 10px 10px;
@@ -62,7 +92,7 @@
                 background-size: contain;
             }
 
-        }    
+        }
         
     }
 
