--- a/views/assets/sass/app.scss
+++ b/views/assets/sass/app.scss
@@ -25,6 +25,21 @@
 @import "footer.scss";
 
 
+#detail-loading-indicator {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  background: rgba(255, 255, 255, 1);
+  z-index: 2000;
+  top: 0;
+  left: 0;
+  transition: all 0.9s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .swiper-container {
   width: 100%;
   height: 100%;
