--- a/web/css/site.css
+++ b/web/css/site.css
@@ -10667,6 +10667,21 @@ h3 {
   line-height: 25px;
 }
 
+#detail-loading-indicator {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  background: white;
+  z-index: 2000;
+  top: 0;
+  left: 0;
+  transition: all 0.9s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .swiper-container {
   width: 100%;
   height: 100%;
