--- a/web/css/site.css
+++ b/web/css/site.css
@@ -10667,6 +10667,13 @@ h3 {
   line-height: 25px;
 }
 
+.edit-detail-image {
+  padding: 5rem;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
 #detail-loading-indicator {
   position: fixed;
   height: 100vh;
