implemented file upload for header component

--- a/views/assets/sass/watch-preview.scss
+++ b/views/assets/sass/watch-preview.scss
@@ -15,15 +15,13 @@
             background-position: center;
             background-repeat: no-repeat;
             background-size: contain;
+            background-color: #fff;
         }
 
     }
-
      // BREAKPOINTS
     // Mobile
-    @media (min-width: 576px) {
-     
-       
+    @media (min-width: 576px) {   
       
     }
 
